Fix collapsed styles

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -181,7 +181,7 @@
   padding: 0;
 }
 .navbar-nav > li a {
-  padding: 10px;
+  padding: 10px 6px;
 }
 .navbar-nav > li .dropdown-menu {
   margin-top: 15px;
